--- a/PROPIEDADES-DE-UN-ELEMENTO-GRID/style.css
+++ b/PROPIEDADES-DE-UN-ELEMENTO-GRID/style.css
@@ -8,7 +8,10 @@
     width: 100%;
     height: 100svg; /* Es el alto de nuestra página */
     margin: 0; /* Para evitar problemas */
-    background-color: beige;
+  grid-template-areas:  "header header header"
+                        "aside main main"    /* Vamos a crear 4 filas */
+                        "aside main main"
+                        "footer footer footer" ;
    
 }
 
@@ -28,22 +31,29 @@ background-color: orange;
 /* grid-row-end: 2 ; */ /* Quiero que mi header acabe en la fila 2 */
 
 /* DE FORMA ABREVIADA: */
-grid-row: 1 / 2;
+/* grid-row: 1 / 2; */
 
 /* grid-column-start: 1; */ /* Quiero que mi header empiece en la columna 1 */
 /* grid-column-end: 4; */ /* Quiero que mi header acabe en la columna 4
  */
 
  /* DE FORMA ABREVIADA: */
- grid-column: 1 / 4
+ /* grid-column: 1 / 4 */
+
+/* USANDO EL GRID AREA LO ABREVIARIAMOS ASI: */
+grid-area:header;
+
+
 
 
 }
 
 aside {
 background-color: yellow;
-grid-row-start: 2;
-grid-row-end: 4;
+/* grid-row-start: 2;
+grid-row-end: 4; */
+
+grid-area: aside;
 }
 
 
@@ -55,16 +65,23 @@ grid-column-start: 2;
 grid-column-end: 4; */
 
 /* SE PUEDE ABREVIAR MAS AUN CON GRID AREA: */
-grid-area:      2     /            2             /            4        /          4; 
+/* grid-area:      2     /            2             /            4        /          4;  */
 /* donde empieza la fila / donde empieza la columna / donde acaba la fila / donde acaba la columna */
+       /*  grs                      gcs                         gre                     gce */
 
+grid-area: main;
 }
 
 footer {
 background-color: brown;
-grid-row-start: 4;
+/* grid-row-start: 4;
 grid-row-end:5 ;
 grid-column-start:1 ;
-grid-column-end:4 ;
+grid-column-end:4 ; */
+
+grid-area: footer;
 
 }
+
+
+
